--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,12 @@
   "description": "electron.js clinet to display current offers in the school cafeteria ",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "test": "electron ."
   },
   "author": "FelixmaxYT",
   "license": "ISC",
   "dependencies": {
-    "electron": "^27.0.4",
+    "electron": "^27.0.0",
     "xhr2": "^0.2.1"
   }
 }
