--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "xhr2": "^0.2.1"
   }
