--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "author": "FelixmaxYT",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "electron": "^27.0.0",
     "xhr2": "^0.2.1"
   }
