half done reorganization/rewrite, WIP for final 1.0 release

--- a/server/data/settings.json
+++ b/server/data/settings.json
@@ -1,5 +1,6 @@
 {
-  "pageSwitchInterval": "30",
-  "offerDisplayDuration": "3",
-  "language": "de"
+  "offerDisplayDuration": 8,
+  "menuDisplayDuration": 15,
+  "scheduleDisplayDuration": 20,
+  "fullscreen": true
 }
