--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "caf-server",
+  "name": "cafeteria-display-server",
   "version": "1.0.0",
-  "description": "Web server serving content to be displayed on the monitor",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "movecss": "node scripts/moveCSS.js"
   },
-  "author": "FelixmaxYT",
-  "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "xhr2": "^0.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
-}
+} 
