Revert "half done reorganization/rewrite, WIP for final 1.0 release"
This reverts commit c40538c19e23e5f11a08bbed7ef0af750e2ecad3.

--- a/server/data/settings.json
+++ b/server/data/settings.json
@@ -1,6 +1,5 @@
 {
-  "offerDisplayDuration": 8,
-  "menuDisplayDuration": 15,
-  "scheduleDisplayDuration": 20,
-  "fullscreen": true
+  "pageSwitchInterval": "30",
+  "offerDisplayDuration": "3",
+  "language": "de"
 }
