--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "cafeteria-display-server",
+  "name": "caf-server",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "description": "Web server serving content to be displayed on the monitor",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "movecss": "node scripts/moveCSS.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "FelixmaxYT",
+  "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "helmet": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "xhr2": "^0.2.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
   }
-} 
+}
